Split out YangStmtMapping.{AUGMENT,DEVIATION,REFINE}
Split out another three statements and update users. These statements
have a common trait, which we expose via
model.api.meta.{Declared,Effective}SchemaTreeReferenceStatement.

JIRA: YANGTOOLS-1739
Change-Id: Id7a26d91d0dbc5a79eccf986c3cee7f3f94cae8c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>